[package]
name = "doorkeeper"
version = "0.1.0"
authors = ["pi"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
btleplug = { version = "0.4", features = ["serde"] }
async-std = { version = "1.6.1", features = ["attributes"] }
